--- a/front_end/index.html
+++ b/front_end/index.html
@@ -1,13 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E5KV5Z1ZQJ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-E5KV5Z1ZQJ");
+    </script>
   </head>
   <body>
     <div id="root" class="box-border"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
